# corradeBuildIssues

./: .gitmodules  CMakeLists.txt  README.md
Modules/A/: CMakeLists.txt
Modules/A/include/A/: bnsA.h  bnsAFwd.h
Modules/A/src/: bnsA.cpp
Modules/A/test/: CMakeLists.txt
Modules/A/test/src/: unitTest.cpp
Modules/B/: CMakeLists.txt
Modules/B/include/B/: bnsB.h  bnsBFwd.h
Modules/B/src/: bnsB.cpp
Modules/B/test/: CMakeLists.txt
Modules/B/test/src/: unitTest.cpp
